# rs_agent

./: .gitignore  Cargo.toml  tree.json
src/: looging.rs  main.rs  utils.rs
src/config/: mod.rs
src/memory/: errors.rs  mod.rs
src/ops/: embedding.rs
src/tools/: debug.rs  deep_search.rs  errors.rs  mod.rs  searxng.rs
