[package]
name = "rs_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.27.2"
thiserror = "*"
tracing = "*"
tracing-subscriber = "*"
reqwest = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.22.0"
tokio = {version = "1.42.0", features = ["full"]}       # Asynchronous Rust
regex  = "*"
rayon = "1.10.0"        # Parallel execution library for Rust
indicatif = "0.17"      # Progress bar library for Rust
num_cpus = "1.16"       # For getting number of CPU cores
fastrand = "2.0"        # Fast random number generator
dashmap = "6.1.0"
futures-util = "0.3.31"
crossbeam = "0.8.4"